--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "shop_keepers",
-  "version": "0.0.1",
   "description": "Game B - Shop Keepers - p5 party game",
   "author": "Katherine Chui, Olivia Kasmin, Josh Strupp & Lisa Sakai Quinley",
   "license": "MIT",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && cp -r src/* dist/",
-    "deploy": "npm run build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
+    "vite": "^5.4.1",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "copyfiles": "^2.4.1",
