--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "eslint": "^9.21.0",
     "eslint-config-p5js": "^1.1.0",
     "globals": "^16.0.0"
-  }
+  },
+  "main": "vite.config.js",
+  "keywords": []
 }
