--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.1",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "copyfiles": "^2.4.1",
     "eslint": "^9.21.0",
     "eslint-config-p5js": "^1.1.0",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "vite": "^5.4.1"
   },
   "main": "vite.config.js",
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "lottie-web": "^5.12.2"
+  }
 }
